[project]
name = "servicenow-cmdb-mcp"
version = "0.1.2"
description = "MCP server connecting Claude to ServiceNow CMDB via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "servicenow", "cmdb", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ketiil/mcp-cmdb"
Repository = "https://github.com/ketiil/mcp-cmdb"
Issues = "https://github.com/ketiil/mcp-cmdb/issues"

[project.scripts]
servicenow-cmdb-mcp = "servicenow_cmdb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_cmdb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "respx>=0.22.0",
]
